--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "oh-vue-icons": "^1.0.0-rc3",
     "primeicons": "^6.0.1",
     "primevue": "^3.37.0",
